<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@drawable/background_signup">
    <EditText
        android:id="@+id/new_username_input"
        android:hint="@string/user_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:paddingLeft="5dp"/>
    <EditText
        android:id="@+id/new_password_input"
        android:hint="@string/pw_input"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:paddingLeft="5dp"/>

    <Button
        android:id="@+id/signup_as_new_btn"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cloud"
        android:text="@string/signup_as_new_btn" />

    <TextView
        android:id="@+id/choose_another"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_another"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/empty_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_needed"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"/>
    <Button
        android:id="@+id/back_to_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_signin"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:visibility="gone"/>

</LinearLayout>