<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity= "center"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_signup">
    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/user_input"
        android:background="#FFFCFC"
        android:layout_marginHorizontal="20dp"
        android:paddingLeft="5dp"/>
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/pw_input"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:paddingLeft="5dp"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/cloud"
        android:text="@string/signin_btn"/>
    <TextView
        android:id="@+id/pw_incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_pw"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/empty_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_needed"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/other_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:paddingTop="30dp">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text=" OR "
                android:textColor="@android:color/black" />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:gravity="center"
            android:textSize="20dp"
            android:paddingTop="10dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/user_not_exist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User does not exist."
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"/>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cloud"
        android:text="@string/signup_btn" />

    <Button
        android:id="@+id/guest_btn"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cloud"
        android:text="@string/guest_btn" />

</LinearLayout>