<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_menu">

    <TextView
        android:id="@+id/choose_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/difficulty"
        android:textColor="@color/white"
        android:textSize="30dp" />
    <ImageButton
        android:id="@+id/easy"
        android:layout_width="163dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/easy"
        android:text="@string/second_activity"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <ImageButton
        android:id="@+id/medium"
        android:layout_width="164dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/medium"
        android:text="@string/third_activity" />

    <ImageButton
        android:id="@+id/master"
        android:layout_width="182dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/master"
        android:text="@string/fourth_activity" />

</LinearLayout>